modules/lib/dependencies/libopus/cobalt_opus_shim.h

/**
 * Creates and initializes a libopus decoder for one stream.
 *
 * Forwards to opus_decoder_create with the supplied sampling rate and channel
 * count. The created decoder is returned through outDec as an opaque handle.
 *
 * @param fs       the output sampling rate in hertz; one of 8000, 12000, 16000,
 *                 24000 or 48000.
 * @param channels the number of channels to decode, 1 or 2.
 * @param outDec   receives the created decoder handle on success, or is left
 *                 holding NULL on failure; must not be NULL.
 * @return COBALT_OPUS_OK on success, COBALT_OPUS_BAD_ARG for a NULL outDec,
 *         otherwise the libopus error code from opus_decoder_create.
 */
int32_t cobalt_opus_decoder_create(int32_t fs, int32_t channels, void **outDec);
/**
 * Destroys a decoder created by cobalt_opus_decoder_create.
 *
 * Forwards to opus_decoder_destroy. Must be called at most once per handle. A
 * NULL handle is ignored.
 *
 * @param dec the decoder handle, or NULL.
 */
void cobalt_opus_decoder_destroy(void *dec);
/**
 * Decodes one Opus packet into interleaved signed 16-bit PCM.
 *
 * Forwards to opus_decode. A NULL data pointer with len 0 requests packet-loss
 * concealment for one missing frame; a non-NULL packet with decodeFec set to 1
 * reconstructs the previous lost frame from this packet's in-band LBRR copy.
 * frameSize is the per-channel capacity of pcm in samples; for the concealment
 * and forward-error-correction cases it must equal the duration of the missing
 * audio and be a multiple of 2.5 ms. The return value is the number of samples
 * per channel decoded, or negative on error.
 *
 * @param dec       the decoder handle from cobalt_opus_decoder_create.
 * @param data      the compressed packet bytes, or NULL to request concealment.
 * @param len       the packet length in bytes, or 0 when data is NULL.
 * @param pcm       the output buffer the decoded interleaved PCM is written into.
 * @param frameSize the per-channel sample capacity of pcm.
 * @param decodeFec 1 to decode in-band forward error correction, 0 for a normal
 *                  decode.
 * @return the per-channel decoded sample count on success, or a negative libopus
 *         error code on failure.
 */
int32_t cobalt_opus_decode(void *dec, const uint8_t *data, int32_t len, int16_t *pcm, int32_t frameSize, int32_t decodeFec);
/**
 * Resets the decoder to a freshly initialized state.
 *
 * Applies OPUS_RESET_STATE through opus_decoder_ctl, clearing the decode history
 * including the concealment buffer without changing the sampling rate or channel
 * count.
 *
 * @param dec the decoder handle from cobalt_opus_decoder_create.
 * @return COBALT_OPUS_OK on success, COBALT_OPUS_BAD_ARG for a NULL decoder,
 *         otherwise the libopus error code from opus_decoder_ctl.
 */
int32_t cobalt_opus_decoder_reset_state(void *dec);
/**
 * Allocates and initializes a libopus repacketizer.
 *
 * Forwards to opus_repacketizer_create. The created repacketizer is returned
 * through outRp as an opaque handle and is ready to accept packets with
 * cobalt_opus_repacketizer_cat; the queue is cleared between uses with
 * cobalt_opus_repacketizer_init.
 *
 * @param outRp receives the created repacketizer handle on success, or is left
 *              holding NULL on failure; must not be NULL.
 * @return COBALT_OPUS_OK on success, COBALT_OPUS_BAD_ARG for a NULL outRp,
 *         COBALT_OPUS_ALLOC_FAIL if libopus could not allocate the state.
 */
int32_t cobalt_opus_repacketizer_create(void **outRp);
/**
 * Destroys a repacketizer created by cobalt_opus_repacketizer_create.
 *
 * Forwards to opus_repacketizer_destroy. Must be called at most once per handle.
 * A NULL handle is ignored.
 *
 * @param rp the repacketizer handle, or NULL.
 */
void cobalt_opus_repacketizer_destroy(void *rp);
/**
 * Re-initializes a repacketizer, clearing its queue of submitted frames.
 *
 * Forwards to opus_repacketizer_init. Must be called between independent
 * combine or split operations, and whenever the submitted-packet configuration
 * (coding mode, bandwidth, frame size or channel count) changes or the 120 ms
 * total-duration limit is reached.
 *
 * @param rp the repacketizer handle from cobalt_opus_repacketizer_create.
 * @return COBALT_OPUS_OK on success, COBALT_OPUS_BAD_ARG for a NULL handle.
 */
int32_t cobalt_opus_repacketizer_init(void *rp);