modules/lib/src/main/java/com/github/auties00/cobalt/calls/media/audio/codec/opus/bindings/CobaltOpus.java


    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_decoder_create(int32_t fs, int32_t channels, void **outDec)
     * }
     */
    public static MethodHandle cobalt_opus_decoder_create$handle() {
        return cobalt_opus_decoder_create.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_decoder_create(int32_t fs, int32_t channels, void **outDec)
     * }
     */
    public static MemorySegment cobalt_opus_decoder_create$address() {
        return cobalt_opus_decoder_create.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t cobalt_opus_decoder_create(int32_t fs, int32_t channels, void **outDec)
     * }
     */
    public static int cobalt_opus_decoder_create(int fs, int channels, MemorySegment outDec) {
        var mh$ = cobalt_opus_decoder_create.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_opus_decoder_create", fs, channels, outDec);
            }
            return (int)mh$.invokeExact(fs, channels, outDec);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class cobalt_opus_decoder_destroy {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            CobaltOpus.C_POINTER
        );

        public static final MemorySegment ADDR = CobaltOpus.findOrThrow("cobalt_opus_decoder_destroy");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void cobalt_opus_decoder_destroy(void *dec)
     * }
     */
    public static FunctionDescriptor cobalt_opus_decoder_destroy$descriptor() {
        return cobalt_opus_decoder_destroy.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void cobalt_opus_decoder_destroy(void *dec)
     * }
     */
    public static MethodHandle cobalt_opus_decoder_destroy$handle() {
        return cobalt_opus_decoder_destroy.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void cobalt_opus_decoder_destroy(void *dec)
     * }
     */
    public static MemorySegment cobalt_opus_decoder_destroy$address() {
        return cobalt_opus_decoder_destroy.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void cobalt_opus_decoder_destroy(void *dec)
     * }
     */
    public static void cobalt_opus_decoder_destroy(MemorySegment dec) {
        var mh$ = cobalt_opus_decoder_destroy.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_opus_decoder_destroy", dec);
            }
            mh$.invokeExact(dec);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class cobalt_opus_decode {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltOpus.C_INT,
            CobaltOpus.C_POINTER,
            CobaltOpus.C_POINTER,
            CobaltOpus.C_INT,
            CobaltOpus.C_POINTER,
            CobaltOpus.C_INT,
            CobaltOpus.C_INT
        );

        public static final MemorySegment ADDR = CobaltOpus.findOrThrow("cobalt_opus_decode");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_decode(void *dec, const uint8_t *data, int32_t len, int16_t *pcm, int32_t frameSize, int32_t decodeFec)
     * }
     */
    public static FunctionDescriptor cobalt_opus_decode$descriptor() {
        return cobalt_opus_decode.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_decode(void *dec, const uint8_t *data, int32_t len, int16_t *pcm, int32_t frameSize, int32_t decodeFec)
     * }
     */
    public static MethodHandle cobalt_opus_decode$handle() {
        return cobalt_opus_decode.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_decode(void *dec, const uint8_t *data, int32_t len, int16_t *pcm, int32_t frameSize, int32_t decodeFec)
     * }
     */
    public static MemorySegment cobalt_opus_decode$address() {
        return cobalt_opus_decode.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t cobalt_opus_decode(void *dec, const uint8_t *data, int32_t len, int16_t *pcm, int32_t frameSize, int32_t decodeFec)
     * }
     */
    public static int cobalt_opus_decode(MemorySegment dec, MemorySegment data, int len, MemorySegment pcm, int frameSize, int decodeFec) {
        var mh$ = cobalt_opus_decode.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_opus_decode", dec, data, len, pcm, frameSize, decodeFec);
            }
            return (int)mh$.invokeExact(dec, data, len, pcm, frameSize, decodeFec);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class cobalt_opus_decoder_reset_state {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltOpus.C_INT,
            CobaltOpus.C_POINTER
        );

        public static final MemorySegment ADDR = CobaltOpus.findOrThrow("cobalt_opus_decoder_reset_state");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_decoder_reset_state(void *dec)
     * }
     */
    public static FunctionDescriptor cobalt_opus_decoder_reset_state$descriptor() {
        return cobalt_opus_decoder_reset_state.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_decoder_reset_state(void *dec)
     * }
     */
    public static MethodHandle cobalt_opus_decoder_reset_state$handle() {
        return cobalt_opus_decoder_reset_state.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_decoder_reset_state(void *dec)
     * }
     */
    public static MemorySegment cobalt_opus_decoder_reset_state$address() {
        return cobalt_opus_decoder_reset_state.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t cobalt_opus_decoder_reset_state(void *dec)
     * }
     */
    public static int cobalt_opus_decoder_reset_state(MemorySegment dec) {
        var mh$ = cobalt_opus_decoder_reset_state.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_opus_decoder_reset_state", dec);
            }
            return (int)mh$.invokeExact(dec);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class cobalt_opus_repacketizer_create {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltOpus.C_INT,
            CobaltOpus.C_POINTER
        );

        public static final MemorySegment ADDR = CobaltOpus.findOrThrow("cobalt_opus_repacketizer_create");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_repacketizer_create(void **outRp)
     * }
     */
    public static FunctionDescriptor cobalt_opus_repacketizer_create$descriptor() {
        return cobalt_opus_repacketizer_create.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_repacketizer_create(void **outRp)
     * }
     */
    public static MethodHandle cobalt_opus_repacketizer_create$handle() {
        return cobalt_opus_repacketizer_create.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_repacketizer_create(void **outRp)
     * }
     */
    public static MemorySegment cobalt_opus_repacketizer_create$address() {
        return cobalt_opus_repacketizer_create.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t cobalt_opus_repacketizer_create(void **outRp)
     * }
     */
    public static int cobalt_opus_repacketizer_create(MemorySegment outRp) {
        var mh$ = cobalt_opus_repacketizer_create.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_opus_repacketizer_create", outRp);
            }
            return (int)mh$.invokeExact(outRp);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class cobalt_opus_repacketizer_destroy {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            CobaltOpus.C_POINTER
        );

        public static final MemorySegment ADDR = CobaltOpus.findOrThrow("cobalt_opus_repacketizer_destroy");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void cobalt_opus_repacketizer_destroy(void *rp)
     * }
     */
    public static FunctionDescriptor cobalt_opus_repacketizer_destroy$descriptor() {
        return cobalt_opus_repacketizer_destroy.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void cobalt_opus_repacketizer_destroy(void *rp)
     * }
     */
    public static MethodHandle cobalt_opus_repacketizer_destroy$handle() {
        return cobalt_opus_repacketizer_destroy.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void cobalt_opus_repacketizer_destroy(void *rp)
     * }
     */
    public static MemorySegment cobalt_opus_repacketizer_destroy$address() {
        return cobalt_opus_repacketizer_destroy.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void cobalt_opus_repacketizer_destroy(void *rp)
     * }
     */
    public static void cobalt_opus_repacketizer_destroy(MemorySegment rp) {
        var mh$ = cobalt_opus_repacketizer_destroy.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_opus_repacketizer_destroy", rp);
            }
            mh$.invokeExact(rp);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class cobalt_opus_repacketizer_init {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltOpus.C_INT,
            CobaltOpus.C_POINTER
        );

        public static final MemorySegment ADDR = CobaltOpus.findOrThrow("cobalt_opus_repacketizer_init");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_repacketizer_init(void *rp)
     * }
     */
    public static FunctionDescriptor cobalt_opus_repacketizer_init$descriptor() {
        return cobalt_opus_repacketizer_init.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_repacketizer_init(void *rp)
     * }
     */
    public static MethodHandle cobalt_opus_repacketizer_init$handle() {
        return cobalt_opus_repacketizer_init.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_repacketizer_init(void *rp)
     * }
     */
    public static MemorySegment cobalt_opus_repacketizer_init$address() {
        return cobalt_opus_repacketizer_init.ADDR;
    }
